tools/tests/errors/surf_name_02.experr
name 'compute' is not defined
